Documentation updated. Registration complete. OAuth exception added to registration endpoint
