# rucsok-resource/src/main/java/com/rucsok/user/view/controller/UserRegistrationController.java
@@ -4,17 +4,23 @@ import javax.validation.Valid;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.validation.BindingResult;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.google.common.annotations.GwtIncompatible;
 import com.rucsok.user.domain.User;
 import com.rucsok.user.service.UserRegistrationService;
 import com.rucsok.user.service.exception.NoUserGivenException;
 import com.rucsok.user.view.model.UserRegistrationRequest;
 import com.rucsok.user.view.model.UserRegistrationResponse;
 import com.rucsok.user.view.transform.UserRegistrationTransformer;
+import org.springframework.http.HttpStatus;
+import io.swagger.annotations.Api;
 
 @RestController
+@Api
 public class UserRegistrationController {
 
 	private UserRegistrationTransformer userTransformer;
@@ -29,7 +35,9 @@ public class UserRegistrationController {
 		this.userRegistrationService = userRegistrationService;
 	}
 	
-	public UserRegistrationResponse register(@Valid UserRegistrationRequest request, BindingResult result) {
+	@RequestMapping(path = "/register", method = RequestMethod.POST)
+	@ResponseStatus(HttpStatus.CREATED)
+	public UserRegistrationResponse register(@RequestBody @Valid UserRegistrationRequest request, BindingResult result) {
 		User user;
 		if (request == null) {
 			return userTransformer.transformToResponse(new NoUserGivenException());
