# rucsok-resource/src/main/java/com/rucsok/user/view/transform/UserRegistrationTransformer.java
@@ -2,6 +2,9 @@ package com.rucsok.user.view.transform;
 
 import java.util.List;
 
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 import org.springframework.validation.ObjectError;
 
@@ -15,11 +18,18 @@ import com.rucsok.user.view.model.UserRegistrationResponse;
 @Component
 public class UserRegistrationTransformer {
 
+	@Autowired
+	private PasswordEncoder passwordEncoder;
+	
 	public UserRegistration transformToRegistration(UserRegistrationRequest request) {
 		if (request == null) {
 			throw new IllegalArgumentException();
 		}
-		return new UserRegistration(request.getEmail(), request.getUsername(), request.getPassword());
+		return new UserRegistration(request.getEmail(), request.getUsername(), encodePassword(request));
+	}
+
+	private String encodePassword(UserRegistrationRequest request) {
+		return passwordEncoder.encode(request.getPassword());
 	}
 
 	public UserRegistrationResponse transformToResponse(User user) {
